[package]
name = "book"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
db-pool = { path = "..", package = "db-pool", features = [
    "diesel-postgres",
    "diesel-async-postgres",
    "diesel-async-bb8",
] }
diesel = { version = "2.2.4", features = ["mysql", "postgres", "r2d2"] }
diesel-async = { version = "0.5.0", features = ["bb8", "mysql", "postgres"] }
dotenvy = "0.15.7"
futures = "0.3.30"
r2d2 = "0.8.10"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-shared-rt = "0.1.0"


[[example]]
name = "sync_tutorial_01"
path = "src/tutorials/sync/01.rs"
test = true

[[example]]
name = "sync_tutorial_02"
path = "src/tutorials/sync/02.rs"
test = true

[[example]]
name = "sync_tutorial_03"
path = "src/tutorials/sync/03.rs"
test = true

[[example]]
name = "sync_tutorial_04"
path = "src/tutorials/sync/04.rs"
test = true

[[example]]
name = "sync_tutorial_05"
path = "src/tutorials/sync/05.rs"
test = true

[[example]]
name = "sync_tutorial_06"
path = "src/tutorials/sync/06.rs"
test = true

[[example]]
name = "sync_tutorial_07"
path = "src/tutorials/sync/07.rs"
test = true

[[example]]
name = "async_tutorial_01"
path = "src/tutorials/async/01.rs"
test = true

[[example]]
name = "async_tutorial_02"
path = "src/tutorials/async/02.rs"
test = true

[[example]]
name = "async_tutorial_03"
path = "src/tutorials/async/03.rs"
test = true

[[example]]
name = "async_tutorial_04"
path = "src/tutorials/async/04.rs"
test = true

[[example]]
name = "async_tutorial_05"
path = "src/tutorials/async/05.rs"
test = true

[[example]]
name = "async_tutorial_06"
path = "src/tutorials/async/06.rs"
test = true

[[example]]
name = "async_tutorial_07"
path = "src/tutorials/async/07.rs"
test = true
